--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content"
         android:text="Welcome to CarConnect – your go-to carpooling app designed exclusively for students!"
         android:textSize="16sp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:lineSpacingExtra="3dp"
         />
 
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="CarConnect makes your school journey smoother, and more affordable by connecting you with fellow students in your area who share similar schedules.  Join CarConnect today and take the hassle out of your daily travel!"
         android:textSize="16sp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         android:lineSpacingExtra="3dp"
         />
 
@@ -70,7 +70,7 @@
         android:layout_width="match_parent"
         android:layout_height="66dp"
         android:hint="Password"
-        android:inputType="textEmailAddress" />
+        android:inputType="textPassword" />
 
     <Button
         android:id="@+id/loginButton"
@@ -80,22 +80,20 @@
         android:backgroundTint="#5C2D91"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"
-        />
+        android:layout_marginTop="10dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="or"
         android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        android:textColor="#898989"
-        />
+        android:layout_marginTop="10dp"
+        android:textColor="#898989" />
+
     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="#898989"
-        />
+        android:background="#898989" />
 
     <Button
         android:id="@+id/signupButton"
@@ -105,7 +103,7 @@
         android:backgroundTint="#5C2D91"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="15dp"
         />
 
     <!-- Footer Text -->
@@ -116,7 +114,7 @@
         android:text="Project made by palina &amp; Andrew, for CodePath &amp; NJIT Course."
         android:textSize="12sp"
         android:gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:textColor="#000000" />
 
 </LinearLayout>
