added button that redirects to car info form

--- a/app/src/main/res/layout/activity_car_information.xml
+++ b/app/src/main/res/layout/activity_car_information.xml
@@ -65,7 +65,7 @@
         android:id="@+id/submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Save Car Info"
+        android:text="Save Car Details"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/license_number_input"
