--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -63,6 +63,14 @@
             android:entries="@array/drive_options"
             android:layout_marginBottom="8dp" />
 
+        <Button
+            android:id="@+id/enter_car_details_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Enter Car Details"
+            android:visibility="gone"
+            android:layout_marginTop="16dp"/>
+
         <TextView
             android:id="@+id/text2"
             android:layout_width="match_parent"
