Finished writing the update account functionality

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -40,13 +40,13 @@
             android:letterSpacing="0.02" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/update_account"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Update Account" />
 
         <Button
-            android:id="@+id/button_1"
+            android:id="@+id/update_car_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Update Car info" />
