Trying to add a button to accept the ride

--- a/app/src/main/res/layout/activity_match_found.xml
+++ b/app/src/main/res/layout/activity_match_found.xml
@@ -14,4 +14,10 @@
         android:textStyle="bold"
         android:textColor="@android:color/holo_red_dark"
         android:layout_margin="16dp" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Accept Ride!" />
 </LinearLayout>
