--- a/app/src/main/res/layout/activity_match_found.xml
+++ b/app/src/main/res/layout/activity_match_found.xml
@@ -16,6 +16,15 @@
         android:textColor="@android:color/holo_red_dark"
         android:layout_margin="16dp" />
 
+    <TextView
+        android:id="@+id/logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="sans-serif"
+        android:padding="12dp"
+        android:textSize="18sp"
+        android:text="TextView" />
+
     <Button
         android:id="@+id/accept_button"
         android:layout_width="wrap_content"
@@ -43,4 +52,5 @@
         android:textFontWeight="@android:integer/config_longAnimTime"
         android:textSize="18sp"
         tools:ignore="ExtraText" />
+
 </LinearLayout>
