--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,4 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -22,23 +24,46 @@
         android:layout_gravity="center"
         android:layout_marginTop="8dp" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/weatherImage"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/weatherInfo"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="16dp"
+            android:layout_weight="1"
+            android:text="TextView" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/statusText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="You are at school, let's find you a ride home!"
-        android:textSize="16sp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:layout_marginTop="16dp" />
+        android:text="You are at school, let's find you a ride home!"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/findRideButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Find a Ride"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#5C2D91"
-        android:textColor="#FFFFFF"
-        android:layout_marginTop="16dp" />
+        android:text="Find a Ride"
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/findPassengerButton"
